--- a/CSS/CSS_3_style.css
+++ b/CSS/CSS_3_style.css
@@ -1,4 +1,5 @@
 /* margin: top right bottom left */
+/* margin: top&bottom left&right */
 /* 'margin: auto' places the block itself at the center of the page */
 
 #top {
