--- a/CSS/CSS_1_style.css
+++ b/CSS/CSS_1_style.css
@@ -9,6 +9,21 @@ selected tag{
 
 */
 
+/* CSS boilerplate :- */
+
+/* *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body{
+    width: 100%;
+    height: 100%;
+} */
+
+/* There is no auto-complete for CSS boilerplate unlike HTML */
+
 h1 {
     color: blue;
 }
@@ -24,9 +39,12 @@ h4 {
     color: rgba(255, 153, 0, 0.5);
 }
 
+/* 'background-size: cover;' will make the image cover the entire screen */
+
 body {
     background-image: url(https://www.desktopbackground.org/download/3840x2400/2015/02/19/905079_clouds-and-blue-sky-cool-wallpapers-for-desktop-and-phone_4288x2848_h.jpg);
-    background-size: 200%;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
