--- a/Flask/Flask_6/templates/index.html
+++ b/Flask/Flask_6/templates/index.html
@@ -32,10 +32,12 @@
           </div>
         </div>
       </nav>
-
-    <h1>Message flashing</h1>
-    {% block content %}
-    {% endblock %}
+    
+    <div class="container-fluid">
+      <h1>Message flashing</h1>
+      {% block content %}
+      {% endblock %}
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
